# fr3

./: LICENSE  README.md
jju/franka_ros2_ws/src/: CHANGELOG.rst
jju/franka_ros2_ws/src/franka_semantic_components/: CMakeLists.txt
jju/my_robot/: .setup_assistant
jju/my_robot/src/: CMakeLists.txt  package.xml  setup.py
jju/my_robot/src/config/: fr3.urdf  fr3.urdf.xacro  franka_gripper_node.yaml  initial_positions_for_xacro.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  panda.ros2_control.xacro  panda.srdf  panda.urdf  panda.urdf.xacro  ros2_controllers.yaml
jju/my_robot/src/config/pana/: pana.usd
jju/my_robot/src/config/pana/configuration/: pana_physics.usd
jju/my_robot/src/config/panda/configuration/: panda_physics.usd
jju/my_robot/src/launch/: robot.launch.py
jju/my_robot/src/package/: package.usd
jju/my_robot/src/package/configuration/: package_physics.usd
